# tma25-oneweb

./: .gitignore  Makefile  README.md  pyproject.toml
Fig-1/: oneweb.m  starlink.m  starlink.tle
Fig-10/: plot-heatmap.py  plot.py
Fig-12/: plot.py
Fig-2/: oneweb-pop.json  oneweb-snp.csv  plot.py
Fig-3/: aim.py  ping.py  plot.py
Fig-4/: Fig4.m
Fig-5/: plot.py
Fig-6/: plot.py
Fig-7/: plot.py
Fig-8/: plot.py
Fig-9/: Satellites_9a.m  Satellites_9b.m  plot.py
common/: aim.py  ping.py
